# polar-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
HomebrewFormula/: polar-cli.rb
src/polar_cli/: __init__.py  __main__.py  app.py  client.py  config.py  context.py  errors.py  output.py  utils.py
src/polar_cli/commands/: auth.py  benefit_grants.py  benefits.py  checkout_links.py  checkouts.py  custom_fields.py  customers.py  discounts.py  disputes.py  event_types.py  events.py  files.py  license_keys.py  members.py  meters.py  metrics.py  orders.py  org.py  payments.py  products.py  refunds.py  subscriptions.py  webhooks.py
tests/: conftest.py  test_app.py  test_client.py  test_config.py  test_context.py  test_errors.py  test_output.py  test_utils.py
tests/commands/: test_auth.py  test_crud_gaps.py  test_customers.py  test_new_groups.py  test_new_resources.py  test_orders.py  test_org.py  test_products.py  test_special_ops.py  test_subscriptions.py
