[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "polar-cli"
dynamic = ["version"]
description = "CLI for Polar — manage products, customers, and webhooks from the terminal"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Berkant Ay" },
]
keywords = ["polar", "cli", "payments", "saas", "subscriptions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "polar-sdk>=0.27.3",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0.0",
    "keyring>=25.0.0",
]

[project.urls]
Homepage = "https://github.com/berkantay/polar-cli"
Repository = "https://github.com/berkantay/polar-cli"
Documentation = "https://github.com/berkantay/polar-cli#readme"

[project.scripts]
polar = "polar_cli.app:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/polar_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/polar_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
